Remove style tag insertion

--- a/tests.html
+++ b/tests.html
@@ -3,6 +3,7 @@
     <head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Fluid Width Videos with Fitvids.js</title>
+        <link href="fitvids.css" rel="stylesheet">
         <style>
         	body {
             background: #ddd;
